--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ orcid_username: 0000-0002-8807-7074
 # About Section
 # about_title: About Me
 # about_profile_image: images/profile.jpg
-about_profile_image: images/DSCF0348.jpg
+about_profile_image: images/test1.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
