--- a/_config.yml
+++ b/_config.yml
@@ -60,23 +60,17 @@ content:
       - layout: left
         title: University of Duisburg-Essen
         caption: 2013 - 2018
-        sub_title: BSc Computer Science
-        quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-        description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+        sub_title: Bachelor of Applied Computer Science
+        description: |
+        Aside from the expected content of a Bachelor's 
+        The final thesis' was *Computing Core Graphs with SAT/SMT Solvers* <mark>python</mark>
+        asdftest
       - layout: left
         title: University of Duisburg-Essen
         caption: 2018 - 2023
-        sub_title: BSc Computer Science
-        quote: >
-          Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-        description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-          I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
+        sub_title: Master of Applied Computer Science
+        description: |
+        The thesis' titel was *Graph Games: Solutions and Strategy Computation in Theory and Practice*
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
