--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ orcid_username: 0000-0002-8807-7074
 # about_profile_image: images/profile.jpg
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Maxime and I'm a computer science graduate. I wrote both my Bachelor's and Master's theses 
+  Hi, my name's Maxime and I'm a computer science graduate. I'm currently looking for a software development job in and around Amsterdam.
 
   I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
 
@@ -61,40 +61,40 @@ content:
         title: University of Duisburg-Essen
         caption: 2013 - 2018
         sub_title: Bachelor of Applied Computer Science
-        description: | 
-          Aside from the expected content of a Bachelor's 
-          The final thesis' was *Computing Core Graphs with SAT/SMT Solvers* <mark>python</mark>
-          asdftest
+        description: |
+          The final thesis was *Computing Core Graphs with SAT/SMT Solvers* and deals with solving a problem from graph theory/theoretical computer science in practice. [The accompanying software](https://github.com/mnederkorn/CoReS) made heavy use of <mark>python</mark>.
+          [A presentation](https://link.springer.com/chapter/10.1007/978-3-319-92991-0_3) based on this software was held at the ICGT 2018.
       - layout: left
         title: University of Duisburg-Essen
         caption: 2018 - 2023
         sub_title: Master of Applied Computer Science
         description: |
-        The thesis' titel was *Graph Games: Solutions and Strategy Computation in Theory and Practice*
-  - title: Experience # Title for the section
+          As part of my master's I did a group project related to autonomous driving. We combined data from cameras and a Lidar to track other drivers in 3D space. The image processing for that used <mark>PyTorch</mark> and <mark>TensorFlow</mark> which used to detected the other drivers.
+          I also took an elective course on bayesian modelling where I learned various data processing and modelling techniques in <mark>R</mark> and <mark>stan</mark>.
+          The final thesis was *Graph Games: Solutions and Strategy Computation in Theory and Practice*. Again this deals with solving a problem from graph theory/theoretical computer science. For multiple related problems I took preexisting theoretical approaches and implemented tested their performance against each other under changing combinations.
+  - title: Work Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: The Boring Company
-        link: boringcompany.com
+        title: University of Duisburg-Essen
+        # link: boringcompany.com
         # link_text: boringcompany.com
-        sub_title: Senior Network System Administrator
-        caption: November 2017 - Present
-        quote: >
-          Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+        sub_title: Scientific research assistant
+        caption: 2018 - 2019
         description: | # this will include new lines to allow paragraphs
-            Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
-  - title: A Little More About Me
+          Based on the presentation we did going off of my Bachelor's thesis the theoretical computer science chair hired me do expand [the software](https://github.com/mnederkorn/CoReS) and add two ([1](https://github.com/mnederkorn/ccq), [2](https://github.com/mnederkorn/inv_chk)) proof of concept implementations that make use of the software. [This was again published](https://www.sciencedirect.com/science/article/abs/pii/S2352220818301561?via%3Dihub) in the *Journal of Logical and Algebraic Methods in Programming*.
+      - layout: left
+        title: various
+        # link: boringcompany.com
+        # link_text: boringcompany.com
+        # sub_title: Scientific research assistant
+        caption: 2013 - 2019
+        description: | # this will include new lines to allow paragraphs
+          Throughout my Bachelor's and part of my Master's I also worked various other jobs unrelated to software development of computer science: In electronics retailing, as a bouncer, but for the longest time as an employee for a private security contractor.
+  - title: About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
-      - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
+      Beyond my typical developer hobbies like endless small programming projects and a liking for gaming, some of my other interests are powerlifting, crochet and outdoor sports like hiking/camping, biking and swimming in the Ocean. At my home in Germany I used to be a volunteer rescure swimmer with the Red Cross. When I have time I also play the piano and clarinet, I like jazz and classical music.
 
 # Footer
 # footer_show_references: true
