--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Maxime Nederkorn
-title: Computer Science Graduate
+title: Computer Science MSc.
 email: mail@nederkorn.xyz
 website: nederkorn.xyz
 
@@ -51,7 +51,7 @@ about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Maxime and I'm a computer science graduate. I'm currently looking for a software development job in and around Amsterdam.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
+  I am most proficient in <mark>python</mark> and I prefer to work on the more abstract aspects of software development in the direction of data science or machine learning.
 
 content:
   - title: Education # Title for the section
@@ -63,14 +63,16 @@ content:
         sub_title: Bachelor of Applied Computer Science
         description: |
           The final thesis was *Computing Core Graphs with SAT/SMT Solvers* and deals with solving a problem from graph theory/theoretical computer science in practice. [The accompanying software](https://github.com/mnederkorn/CoReS) made heavy use of <mark>python</mark>.
-          [A presentation](https://link.springer.com/chapter/10.1007/978-3-319-92991-0_3) based on this software was held at the ICGT 2018.
+          [A presentation](https://link.springer.com/chapter/10.1007/978-3-319-92991-0_3) based on this software was held at the *ICGT 2018* conference.
       - layout: left
         title: University of Duisburg-Essen
         caption: 2018 - 2023
         sub_title: Master of Applied Computer Science
         description: |
           As part of my master's I did a group project related to autonomous driving. We combined data from cameras and a Lidar to track other drivers in 3D space. The image processing for that used <mark>PyTorch</mark> and <mark>TensorFlow</mark> which used to detected the other drivers.
-          I also took an elective course on bayesian modelling where I learned various data processing and modelling techniques in <mark>R</mark> and <mark>stan</mark>.
+
+          I took an elective course on *bayesian modelling* where I learned various data processing and modelling techniques in <mark>R</mark> and <mark>stan</mark>.
+
           The final thesis was *Graph Games: Solutions and Strategy Computation in Theory and Practice*. Again this deals with solving a problem from graph theory/theoretical computer science. For multiple related problems I took preexisting theoretical approaches and implemented tested their performance against each other under changing combinations.
   - title: Work Experience # Title for the section
     layout: list # Type of content section (list/text)
@@ -82,7 +84,7 @@ content:
         sub_title: Scientific research assistant
         caption: 2018 - 2019
         description: | # this will include new lines to allow paragraphs
-          Based on the presentation we did going off of my Bachelor's thesis the theoretical computer science chair hired me do expand [the software](https://github.com/mnederkorn/CoReS) and add two ([1](https://github.com/mnederkorn/ccq), [2](https://github.com/mnederkorn/inv_chk)) proof of concept implementations that make use of the software. [This was again published](https://www.sciencedirect.com/science/article/abs/pii/S2352220818301561?via%3Dihub) in the *Journal of Logical and Algebraic Methods in Programming*.
+          Based on the presentation we did going off of my Bachelor's thesis the theoretical computer science chair hired me to expand [the software](https://github.com/mnederkorn/CoReS) and add two ([1](https://github.com/mnederkorn/ccq), [2](https://github.com/mnederkorn/inv_chk)) proof of concept implementations that make use of the software. [This was again published](https://www.sciencedirect.com/science/article/abs/pii/S2352220818301561?via%3Dihub) in the *Journal of Logical and Algebraic Methods in Programming*.
       - layout: left
         title: various
         # link: boringcompany.com
