--- a/_config.yml
+++ b/_config.yml
@@ -87,14 +87,14 @@ content:
         caption: 2018 - 2019
         description: | # this will include new lines to allow paragraphs
           Based on the presentation we did going off of my Bachelor's thesis, the theoretical computer science chair hired me to expand [the software](https://github.com/mnederkorn/CoReS) to hypergraphs and add two ([1](https://github.com/mnederkorn/ccq), [2](https://github.com/mnederkorn/inv_chk)) proof of concept implementations that make use of the software. [This was again published](https://www.sciencedirect.com/science/article/abs/pii/S2352220818301561?via%3Dihub) in the *Journal of Logical and Algebraic Methods in Programming*.
-      # - layout: left
-      #   title: various
-      #   # link: boringcompany.com
-      #   # link_text: boringcompany.com
-      #   # sub_title: Scientific research assistant
-      #   caption: 2013 - 2019
-      #   description: | # this will include new lines to allow paragraphs
-      #     Throughout my Bachelor's and part of my Master's I also worked various other jobs unrelated to software development or computer science: In electronics retail, as a bouncer, but for the most time as an employee for a private security contractor.
+      - layout: left
+        title: various
+        # link: boringcompany.com
+        # link_text: boringcompany.com
+        # sub_title: Scientific research assistant
+        caption: 2013 - 2019
+        description: | # this will include new lines to allow paragraphs
+          Throughout my Bachelor's and part of my Master's I also worked various other jobs unrelated to software development or computer science: In electronics retail, as a bouncer, but for the most time as an employee for a private security contractor.
   - title: More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
